Change DB to postgresql:test

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,8 +1,8 @@
 	# MySQL properties
-	mysql.driver=com.mysql.cj.jdbc.Driver
-	mysql.url=jdbc:mysql://localhost:3306/bookdb
-	mysql.user=root
-	mysql.password=root
+	# mysql.driver=com.mysql.cj.jdbc.Driver
+	mysql.url=jdbc:postgresql:test
+	mysql.user=test
+	mysql.password=test@test0
 	
 	# Hibernate properties
 	hibernate.show_sql=true
