--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,9 @@
 		</dependency>
 		<!-- Mysql Connector -->
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>6.0.5</version>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.5</version>
 		</dependency>
 		<!-- Jackson API for JSON -->
 		<dependency>
